--- a/posts/2024-08-13-tidycensus-exploration/index.qmd
+++ b/posts/2024-08-13-tidycensus-exploration/index.qmd
@@ -21,6 +21,26 @@ editor:
 
 ## Setup
 
+```{r my.theme, include=TRUE}
+my.theme <- theme(
+  plot.title = ggtext::element_textbox_simple(face="bold", size=24, margin=margin(b=5)),
+  plot.subtitle = ggtext::element_textbox_simple(color="#444444", size=14, 
+                                                       margin=margin(b=10)),
+  plot.caption = ggtext::element_textbox_simple(color="#444444"),
+  axis.title = element_text(color="black", face="bold", size=12), 
+  axis.text = element_text(color="black", size=18), 
+  axis.ticks.y = element_blank(), 
+  plot.background = element_rect(fill = 'white'),
+  panel.background = element_blank(),
+  panel.grid.major = element_blank(),
+  panel.grid.minor = element_blank(),
+  panel.border = element_blank(), 
+  legend.title=element_blank(), 
+  legend.text = element_text(color="black", size=12, hjust=0),
+  legend.position = 'top',
+  strip.text = element_text(color="black", size=14))
+```
+
 **Required packages**:
 
 ```{r libraries, include=TRUE, warning=FALSE, message=FALSE}
@@ -31,7 +51,7 @@ library(scales)
 census_api_key('ea0509826dec14205b1260b78cee1e2a22e3b85b')
 ```
 
-```{r}
+```{r inspect_variables, include=TRUE}
 load_variables(2022, "acs1", cache = TRUE)
 # used this to search for some Under 5 years variables of interest
 # %>% filter(str_detect(label, "Under 5 years"))
@@ -42,7 +62,20 @@ load_variables(2022, "acs1", cache = TRUE)
 # B17001_018 -- 'Estimate!!Total:!!Income in the past 12 months below poverty level:!!Female:!!Under 5 years'
 ```
 
+```{r}
+?get_acs()
 
+?group_by()
+```
+
+Each variable returns the geography, an estimate, and the margin of error ("moe").
+
+```{r}
+get_acs(geography = 'state',
+        variables = c('B01001_003', 'B01001_027', 'B17001_004', 'B17001_018'),
+        year = 2021,
+        output = 'wide')
+```
 
 
 ```{r}
